--- a/README
+++ b/README
@@ -1,10 +1,12 @@
-H8 Software Development Kit マニュアル
-**************************************
+H8 Platform SDK
+***************
 
 これは何？
 ==========
-H8 Software Development Kit(以下H8SDKと呼ぶ)の使用方法が記述された
-マニュアルです。
+H8 Platform SDK(H8SDK)は，H8/3694マイコンボード上でのアプリケーション
+開発を助けるライブラリ集です．各種ドライバとC標準ライブラリの一部，お
+よび雑多なミドルウェアで構成されています．
+この文書は，H8SDKの構築，使い方について知るためのの窓口です．
 
 構成物
 ======
@@ -44,7 +46,7 @@ test/doc/latex/refman.pdfに使い方の詳細があります。
 ==========
 - High-Performance Embedded Workshop(HEW)
 
-lコンパイル
+コンパイル
 ==========
 1. build/h8sdk.hws をダブルクリックして開きます。
 2. 必要に応じてビルドモジュールの変更やマクロを定義します。詳細はイン
